alignment issue fix

--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -418,8 +418,10 @@ body {
               border-radius: 20px;
               background-color: #0e1d20;
               margin-bottom: 12px;
-              display: inline-flex;
+              color: $white;
+              display: flex;
               align-items: center;
+              justify-content: flex-start;
               @media (max-width: 1024px) {
                   font-size: 14px;
                   padding: 15px 15px;
@@ -432,9 +434,6 @@ body {
                   color: $primary-color;
                   padding-right: 5px;
               }
-              .normal_text{
-                  color: $white;
-              }
               img{
                   width: 18px;
                   height: 18px;
@@ -445,6 +444,9 @@ body {
                     width:20px;
                     height:20px;
                   }
+              }
+              p {
+                margin: 0;
               }
           }
       }
